2010-12-06  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* utils/academic.json: Add THBS.
	* utils/academic.json: Add OnlyMayDay.

2010-11-19  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* utils/academic.json,
	utils/list.json,
	utils/ptt.json: Add Pinewave Radio.

2010-10-08  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* Makefile.am,
	debian/changelog: 'debian' folder should not be included in release
	tarball but can be maintained under VCS.
	* debian/README,
	debian/changelog,
	debian/control,
	debian/copyright,
	debian/source/format,
	man/betaradio.1: Adjust for official Debian package application.
	* mkdeb.sh: Create a script to generate Debian package.
	* configure.ac,
	debian/changelog: Bump to v1.1.1 release.
	* mkdeb.sh: Use hard link instead of dullicate copy.

2010-10-03  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* autogen.sh,
	configure.ac,
	src/Makefile.am,
	src/betaradio.c: Polish gettext usage.
	* TODO,
	configure.ac,
	debian/changelog,
	po/zh_TW.po: Bump to v1.1 release.

2010-09-27  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* autogen.sh: Install copies instead of symbolic links to avoid pbuilder
	failed.

2010-08-31  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* po/zh_TW.po: Update po file.
	* src/betaradio.c: Replace url by some condition.
	* src/gstplay.c: Use playbin2.
	* Makefile.am,
	autogen.sh,
	configure.ac,
	debian/README,
	debian/README.source,
	debian/changelog,
	debian/compat,
	debian/control,
	debian/copyright,
	debian/patches/series,
	debian/rules,
	debian/source/format,
	man/Makefile.am,
	man/betaradio.1: Debianized.
	* configure.ac,
	debian/control,
	debian/copyright,
	debian/rules,
	src/Makefile.am,
	src/json_cat.c,
	src/json_cat.h: Import json-cat as built-in function.
	* Makefile.am: Distributed with debian folder.
	* autogen.sh: Add ./configure
	* po/zh_TW.po: Update po file.

2010-06-30  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
